# APR

./: CMakeLists.txt  CMakePresets.json  README.md  cmake-setup.sh  default_config.yaml  main.cpp  vcpkg-configuration.json  vcpkg.json
src/: Args.cpp  Args.hpp  Config.cpp  Config.hpp  Core.cpp  Core.hpp  Logger.hpp  git2_lib.cpp  git2_lib.hpp  main.cpp  pacman_lib.cpp  pacman_lib.hpp  srcinfo.cpp  srcinfo.hpp
